2007-06-15  Frank Lanitz  <frank@frank.uvena.de>

 * src/about.c: Update of About-dialog.
 * THANKS: Added Spanish translator Nacho Cabanes.


2007-06-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c, src/tools.c: Fix spelling of GTK.
 * src/tools.c:
   Fix bug when reopening the Insert special characters dialog after it
   was closed by a delete event.
   Fix creation of class files with an empty name and some code
   reformatting.


2007-06-14  Frank Lanitz  <frank@frank.uvena.de>

 * src/tools.c: Fixed a small typo.


2007-06-14  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c: Avoid creation of unwanted undo action when opening
                    a saved-as file in a new tab.


2007-06-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.c, src/interface.c, src/templates.h, src/tools.c,
   src/tools.h, src/callbacks.c, src/callbacks.h, geany.glade, THANKS:
   Apply class builder patch from Alexander Rodin (thanks).


2007-06-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/build.c, src/utils.c:
   Use g_io_channel_win32_new_fd() as recommended in GLib docs for
   utils_set_up_io_channel() on Windows. (Unlikely to change behaviour
   though).
 * src/callbacks.c:
   Fix segfault when attempting to rename a new file from the Save As
   dialog.


2007-06-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c, src/dialogs.c:
   Add "Open file in a new tab" and "Rename file" to the "Save as"
   dialog for more control over saved file.


2007-06-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, src/sciwrappers.c, src/sciwrappers.h, src/prefs.c,
   src/callbacks.c, src/callbacks.h, src/keyfile.c, src/document.c,
   src/document.h, src/main.c, src/editor.c, src/editor.h,
   src/ui_utils.c, geany.glade:
   Rename some menubar widget names.
   Use indentation spelling in variable names.


2007-06-11  Enrico Tröger  <enrico.troeger@uvena.de>
